refactor: optimize imports and migrate to Path.of API